--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,17 +1,18 @@
-name: Update gist with WakaTime stats
+name: Update WakaTime Stats
+
 on:
   schedule:
-    - cron: "0 0 * * *"
-  # Manual triggers with workflow_dispatch
-  workflow_dispatch:
+    - cron: "0 0 * * *"  # 매일 UTC 00:00에 실행
+  workflow_dispatch:  # 수동 실행 옵션
+
 jobs:
   update-gist:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - name: Update gist
         uses: matchai/waka-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GH_TOKEN: ${{ secrets.grass }}
+          GIST_ID: waka
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
